// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FullScreenUserCard should display the below data object in FullScreenUserCard, FulScreenComments and Title elements 1`] = `
<div
  style={
    Object {
      "alignItems": "flex-start",
      "backgroundColor": "RGBA(0,0,0,0.5)",
      "display": "flex",
      "flex": "none | [ <'flex-grow'> <'flex-shrink'>? || <'flex-basis'> ]",
      "flexDirection": "row",
      "height": "auto",
      "justifyContent": "space-around",
      "left": "0",
      "marginTop": "100vh",
      "maxHeight": "300px",
      "maxWidth": "100%",
      "minWidth": "100%",
      "overflowY": "scroll",
      "position": "absolute",
      "top": "0",
      "width": "auto",
      "zIndex": "31",
    }
  }
>
  <div
    style={
      Object {
        "flex": "none | [ <'flex-grow'> <'flex-shrink'>? || <'flex-basis'> ]",
        "marginLeft": "2%",
        "marginRight": "2%",
        "marginTop": "1%",
        "maxWidth": "55%",
      }
    }
  >
    <div
      style={
        Object {
          "display": "flex",
          "flex": "none | [ <'flex-grow'> <'flex-shrink'>? || <'flex-basis'> ]",
          "flexDirection": "column",
          "height": "auto",
          "justifyContent": "space-between",
          "width": "auto",
        }
      }
    >
      <div
        style={
          Object {
            "flex": "none | [ <'flex-grow'> <'flex-shrink'>? || <'flex-basis'> ]",
            "height": "auto",
            "marginBottom": "2%",
            "width": "auto",
          }
        }
      >
        <div
          style={
            Object {
              "alignItems": "center",
              "backgroundColor": "#FFF",
              "borderBottom": "inset",
              "display": "flex",
              "flex": "none | [ <'flex-grow'> <'flex-shrink'>? || <'flex-basis'> ]",
              "flexDirection": "Column",
              "height": "auto",
              "justifyContent": "center",
              "minWidth": "40vw",
              "width": "auto",
            }
          }
        >
          <h1>
            test name
          </h1>
          <div
            dangerouslySetInnerHTML={
              Object {
                "__html": "test description",
              }
            }
            style={
              Object {
                "flex": "none | [ <'flex-grow'> <'flex-shrink'>? || <'flex-basis'> ]",
                "height": "auto",
                "margin": "3%",
                "width": "90%",
              }
            }
          />
        </div>
      </div>
      <div
        style={
          Object {
            "flex": "none | [ <'flex-grow'> <'flex-shrink'>? || <'flex-basis'> ]",
            "height": "auto",
            "marginBottom": "2%",
            "width": "auto",
          }
        }
      >
        <div
          style={
            Object {
              "alignItems": "center",
              "backgroundColor": "#FFF",
              "borderBottom": "inset",
              "borderRight": "inset",
              "display": "flex",
              "flex": "none | [ <'flex-grow'> <'flex-shrink'>? || <'flex-basis'> ]",
              "flexDirection": "column",
              "height": "auto",
              "justifyContent": "flex-start",
              "minWidth": "100%",
              "width": "auto",
            }
          }
        >
          <div
            style={
              Object {
                "alignItems": "center",
                "display": "flex",
                "flex": "none | [ <'flex-grow'> <'flex-shrink'>? || <'flex-basis'> ]",
                "flexDirection": "row",
                "height": "auto",
                "justifyContent": "flex-start",
                "minWidth": "100%",
                "width": "auto",
              }
            }
          >
            <img
              alt="avatar"
              src="http://google.ca"
              style={
                Object {
                  "flex": "none | [ <'flex-grow'> <'flex-shrink'>? || <'flex-basis'> ]",
                  "height": "auto",
                  "margin": "0.3%",
                  "maxHeight": "120px",
                  "width": "auto",
                }
              }
            />
            <div
              style={
                Object {
                  "display": "flex",
                  "flex": "none | [ <'flex-grow'> <'flex-shrink'>? || <'flex-basis'> ]",
                  "flexDirection": "row",
                  "height": "auto",
                  "justifyContent": "space-between",
                  "marginLeft": "1%",
                  "minWidth": "78%",
                  "width": "auto",
                }
              }
            >
              <div
                style={
                  Object {
                    "display": "flex",
                    "flex": "none | [ <'flex-grow'> <'flex-shrink'>? || <'flex-basis'> ]",
                    "flexDirection": "column",
                    "height": "auto",
                    "justifyContent": "flex-start",
                    "minWidth": "85%",
                    "width": "auto",
                  }
                }
              >
                <p
                  style={
                    Object {
                      "flex": "none | [ <'flex-grow'> <'flex-shrink'>? || <'flex-basis'> ]",
                      "height": "auto",
                      "width": "auto",
                    }
                  }
                >
                  Photographer: 
                  Test User
                </p>
                <p
                  style={
                    Object {
                      "flex": "none | [ <'flex-grow'> <'flex-shrink'>? || <'flex-basis'> ]",
                      "height": "auto",
                      "width": "auto",
                    }
                  }
                >
                  Rating: 
                  99.99999995
                  %
                </p>
              </div>
              <div
                style={
                  Object {
                    "alignSelf": "right",
                    "flex": "none | [ <'flex-grow'> <'flex-shrink'>? || <'flex-basis'> ]",
                    "height": "auto",
                    "marginTop": "5px",
                    "maxHeight": "40px",
                    "width": "auto",
                  }
                }
              >
                <img
                  alt="like"
                  src="test-file-stub"
                  style={
                    Object {
                      "flex": "none | [ <'flex-grow'> <'flex-shrink'>? || <'flex-basis'> ]",
                      "height": "auto",
                      "maxWidth": "40px",
                      "width": "auto",
                    }
                  }
                />
              </div>
            </div>
          </div>
          <div
            style={
              Object {
                "alignItems": "left",
                "display": "flex",
                "flex": "none | [ <'flex-grow'> <'flex-shrink'>? || <'flex-basis'> ]",
                "flexDirection": "column",
                "height": "auto",
                "justifyContent": "flex-start",
                "marginTop": "1%",
                "minWidth": "100%",
                "width": "auto",
              }
            }
          />
        </div>
      </div>
      <div
        style={
          Object {
            "flex": "none | [ <'flex-grow'> <'flex-shrink'>? || <'flex-basis'> ]",
            "height": "auto",
            "marginBottom": "2%",
            "width": "auto",
          }
        }
      >
        <div
          style={
            Object {
              "backgroundColor": "RGBA(256,256,256,1)",
              "borderBottom": "inset",
              "display": "flex",
              "flex": "none | [ <'flex-grow'> <'flex-shrink'>? || <'flex-basis'> ]",
              "flexDirection": "column",
              "justifyContent": "space-between",
              "marginTop": "1%",
            }
          }
        >
          <p
            style={
              Object {
                "flex": "none | [ <'flex-grow'> <'flex-shrink'>? || <'flex-basis'> ]",
                "marginLeft": "2%",
                "marginRight": "2%",
                "marginTop": "1%",
              }
            }
          >
            Camera: 
            Olympus M.Zuiko Digital ED 12-40mm f/2.8 PRO
          </p>
          <p
            style={
              Object {
                "flex": "none | [ <'flex-grow'> <'flex-shrink'>? || <'flex-basis'> ]",
                "marginLeft": "2%",
                "marginRight": "2%",
                "marginTop": "1%",
              }
            }
          >
            Shutter Speed: 
            test string
          </p>
          <p
            style={
              Object {
                "flex": "none | [ <'flex-grow'> <'flex-shrink'>? || <'flex-basis'> ]",
                "marginLeft": "2%",
                "marginRight": "2%",
                "marginTop": "1%",
              }
            }
          >
            Aperture: 
            test string
          </p>
          <div>
            <p
              style={
                Object {
                  "marginBottom": "15px",
                  "marginLeft": "30px",
                  "marginRight": "30px",
                }
              }
            >
              Lens Info:
            </p>
            <p
              style={
                Object {
                  "marginBottom": "15px",
                  "marginLeft": "60px",
                  "marginRight": "30px",
                }
              }
            >
              Name: 
              Olympus M.Zuiko Digital ED 12-40mm f/2.8 PRO
            </p>
            <p
              style={
                Object {
                  "marginBottom": "15px",
                  "marginLeft": "60px",
                  "marginRight": "30px",
                }
              }
            >
              Feature: 
              Micro Four Thirds System
            </p>
            <p
              style={
                Object {
                  "marginBottom": "15px",
                  "marginLeft": "60px",
                  "marginRight": "30px",
                }
              }
            >
              24-80mm (35mm Equivalent)
            </p>
            <p
              style={
                Object {
                  "marginBottom": "15px",
                  "marginLeft": "60px",
                  "marginRight": "30px",
                }
              }
            >
              Aperture Range: f/2.8 to f/22
            </p>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    style={
      Object {
        "flex": "none | [ <'flex-grow'> <'flex-shrink'>? || <'flex-basis'> ]",
        "marginLeft": "2%",
        "marginRight": "2%",
        "marginTop": "1%",
        "maxWidth": "55%",
      }
    }
  >
    <div
      style={
        Object {
          "alignItems": "center",
          "backgroundColor": "RGB(256,256,256)",
          "borderBottom": "inset",
          "display": "flex",
          "flex": "none | [ <'flex-grow'> <'flex-shrink'>? || <'flex-basis'> ]",
          "flexDirection": "column",
          "height": "auto",
          "justifyContent": "space-around",
          "maxWidth": "100%",
          "width": "auto",
        }
      }
    >
      <p
        style={
          Object {
            "alignSelf": "center",
            "flex": "none | [ <'flex-grow'> <'flex-shrink'>? || <'flex-basis'> ]",
            "fontSize": "1.3em",
            "fontWeight": "bold",
          }
        }
      >
        User Comments
      </p>
      <div
        style={
          Object {
            "background": "RGBA(256,256,256,1)",
            "border": "outset",
            "display": "flex",
            "flex": "none | [ <'flex-grow'> <'flex-shrink'>? || <'flex-basis'> ]",
            "flexDirection": "column",
            "height": "auto",
            "justifyContent": "center",
            "margin": "2%",
            "maxWidth": "96%",
            "minWidth": "96%",
            "width": "auto",
          }
        }
      >
        <div
          style={
            Object {
              "alignItems": "flex-start",
              "display": "flex",
              "flex": "none | [ <'flex-grow'> <'flex-shrink'>? || <'flex-basis'> ]",
              "flexDirection": "row",
              "justifyContent": "space-between",
              "marginLeft": "1%",
              "marginRight": "1%",
            }
          }
        >
          <p
            style={
              Object {
                "flex": "none | [ <'flex-grow'> <'flex-shrink'>? || <'flex-basis'> ]",
                "fontWeight": "bold",
                "maxWidth": "90%",
                "width": "auto",
                "wordWrap": "normal",
              }
            }
          >
            TestUser
          </p>
          <p>
            2018-01-01
          </p>
        </div>
        <div
          style={
            Object {
              "flex": "none | [ <'flex-grow'> <'flex-shrink'>? || <'flex-basis'> ]",
              "marginLeft": "2%",
              "marginRight": "2%",
              "width": "auto",
            }
          }
        >
          <p
            style={
              Object {
                "flex": "none | [ <'flex-grow'> <'flex-shrink'>? || <'flex-basis'> ]",
                "maxWidth": "100%",
                "width": "auto",
                "wordWrap": "normal",
              }
            }
          >
            Some Comment String
          </p>
        </div>
      </div>
      <div
        style={
          Object {
            "background": "RGBA(256,256,256,1)",
            "border": "outset",
            "display": "flex",
            "flex": "none | [ <'flex-grow'> <'flex-shrink'>? || <'flex-basis'> ]",
            "flexDirection": "column",
            "height": "auto",
            "justifyContent": "center",
            "margin": "2%",
            "maxWidth": "96%",
            "minWidth": "96%",
            "width": "auto",
          }
        }
      >
        <div
          style={
            Object {
              "alignItems": "flex-start",
              "display": "flex",
              "flex": "none | [ <'flex-grow'> <'flex-shrink'>? || <'flex-basis'> ]",
              "flexDirection": "row",
              "justifyContent": "space-between",
              "marginLeft": "1%",
              "marginRight": "1%",
            }
          }
        >
          <p
            style={
              Object {
                "flex": "none | [ <'flex-grow'> <'flex-shrink'>? || <'flex-basis'> ]",
                "fontWeight": "bold",
                "maxWidth": "90%",
                "width": "auto",
                "wordWrap": "normal",
              }
            }
          >
            TestUser2
          </p>
          <p>
            2018-01-02
          </p>
        </div>
        <div
          style={
            Object {
              "flex": "none | [ <'flex-grow'> <'flex-shrink'>? || <'flex-basis'> ]",
              "marginLeft": "2%",
              "marginRight": "2%",
              "width": "auto",
            }
          }
        >
          <p
            style={
              Object {
                "flex": "none | [ <'flex-grow'> <'flex-shrink'>? || <'flex-basis'> ]",
                "maxWidth": "100%",
                "width": "auto",
                "wordWrap": "normal",
              }
            }
          >
            Some Comment String 2
          </p>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`FullScreenUserCard should display the below data object in FullScreenUserCard, and Title elements, comments shouldshow message "No comments yet, be the first to comment on this Great Image!" 1`] = `
<div
  style={
    Object {
      "alignItems": "flex-start",
      "backgroundColor": "RGBA(0,0,0,0.5)",
      "display": "flex",
      "flex": "none | [ <'flex-grow'> <'flex-shrink'>? || <'flex-basis'> ]",
      "flexDirection": "row",
      "height": "auto",
      "justifyContent": "space-around",
      "left": "0",
      "marginTop": "100vh",
      "maxHeight": "300px",
      "maxWidth": "100%",
      "minWidth": "100%",
      "overflowY": "scroll",
      "position": "absolute",
      "top": "0",
      "width": "auto",
      "zIndex": "31",
    }
  }
>
  <div
    style={
      Object {
        "flex": "none | [ <'flex-grow'> <'flex-shrink'>? || <'flex-basis'> ]",
        "marginLeft": "2%",
        "marginRight": "2%",
        "marginTop": "1%",
        "maxWidth": "55%",
      }
    }
  >
    <div
      style={
        Object {
          "display": "flex",
          "flex": "none | [ <'flex-grow'> <'flex-shrink'>? || <'flex-basis'> ]",
          "flexDirection": "column",
          "height": "auto",
          "justifyContent": "space-between",
          "width": "auto",
        }
      }
    >
      <div
        style={
          Object {
            "flex": "none | [ <'flex-grow'> <'flex-shrink'>? || <'flex-basis'> ]",
            "height": "auto",
            "marginBottom": "2%",
            "width": "auto",
          }
        }
      >
        <div
          style={
            Object {
              "alignItems": "center",
              "backgroundColor": "#FFF",
              "borderBottom": "inset",
              "display": "flex",
              "flex": "none | [ <'flex-grow'> <'flex-shrink'>? || <'flex-basis'> ]",
              "flexDirection": "Column",
              "height": "auto",
              "justifyContent": "center",
              "minWidth": "40vw",
              "width": "auto",
            }
          }
        >
          <h1>
            test name
          </h1>
          <div
            dangerouslySetInnerHTML={
              Object {
                "__html": "test description",
              }
            }
            style={
              Object {
                "flex": "none | [ <'flex-grow'> <'flex-shrink'>? || <'flex-basis'> ]",
                "height": "auto",
                "margin": "3%",
                "width": "90%",
              }
            }
          />
        </div>
      </div>
      <div
        style={
          Object {
            "flex": "none | [ <'flex-grow'> <'flex-shrink'>? || <'flex-basis'> ]",
            "height": "auto",
            "marginBottom": "2%",
            "width": "auto",
          }
        }
      >
        <div
          style={
            Object {
              "alignItems": "center",
              "backgroundColor": "#FFF",
              "borderBottom": "inset",
              "borderRight": "inset",
              "display": "flex",
              "flex": "none | [ <'flex-grow'> <'flex-shrink'>? || <'flex-basis'> ]",
              "flexDirection": "column",
              "height": "auto",
              "justifyContent": "flex-start",
              "minWidth": "100%",
              "width": "auto",
            }
          }
        >
          <div
            style={
              Object {
                "alignItems": "center",
                "display": "flex",
                "flex": "none | [ <'flex-grow'> <'flex-shrink'>? || <'flex-basis'> ]",
                "flexDirection": "row",
                "height": "auto",
                "justifyContent": "flex-start",
                "minWidth": "100%",
                "width": "auto",
              }
            }
          >
            <img
              alt="avatar"
              src="http://google.ca"
              style={
                Object {
                  "flex": "none | [ <'flex-grow'> <'flex-shrink'>? || <'flex-basis'> ]",
                  "height": "auto",
                  "margin": "0.3%",
                  "maxHeight": "120px",
                  "width": "auto",
                }
              }
            />
            <div
              style={
                Object {
                  "display": "flex",
                  "flex": "none | [ <'flex-grow'> <'flex-shrink'>? || <'flex-basis'> ]",
                  "flexDirection": "row",
                  "height": "auto",
                  "justifyContent": "space-between",
                  "marginLeft": "1%",
                  "minWidth": "78%",
                  "width": "auto",
                }
              }
            >
              <div
                style={
                  Object {
                    "display": "flex",
                    "flex": "none | [ <'flex-grow'> <'flex-shrink'>? || <'flex-basis'> ]",
                    "flexDirection": "column",
                    "height": "auto",
                    "justifyContent": "flex-start",
                    "minWidth": "85%",
                    "width": "auto",
                  }
                }
              >
                <p
                  style={
                    Object {
                      "flex": "none | [ <'flex-grow'> <'flex-shrink'>? || <'flex-basis'> ]",
                      "height": "auto",
                      "width": "auto",
                    }
                  }
                >
                  Photographer: 
                  Test User
                </p>
                <p
                  style={
                    Object {
                      "flex": "none | [ <'flex-grow'> <'flex-shrink'>? || <'flex-basis'> ]",
                      "height": "auto",
                      "width": "auto",
                    }
                  }
                >
                  Rating: 
                  99.99999995
                  %
                </p>
              </div>
              <div
                style={
                  Object {
                    "alignSelf": "right",
                    "flex": "none | [ <'flex-grow'> <'flex-shrink'>? || <'flex-basis'> ]",
                    "height": "auto",
                    "marginTop": "5px",
                    "maxHeight": "40px",
                    "width": "auto",
                  }
                }
              >
                <img
                  alt="like"
                  src="test-file-stub"
                  style={
                    Object {
                      "flex": "none | [ <'flex-grow'> <'flex-shrink'>? || <'flex-basis'> ]",
                      "height": "auto",
                      "maxWidth": "40px",
                      "width": "auto",
                    }
                  }
                />
              </div>
            </div>
          </div>
          <div
            style={
              Object {
                "alignItems": "left",
                "display": "flex",
                "flex": "none | [ <'flex-grow'> <'flex-shrink'>? || <'flex-basis'> ]",
                "flexDirection": "column",
                "height": "auto",
                "justifyContent": "flex-start",
                "marginTop": "1%",
                "minWidth": "100%",
                "width": "auto",
              }
            }
          />
        </div>
      </div>
      <div
        style={
          Object {
            "flex": "none | [ <'flex-grow'> <'flex-shrink'>? || <'flex-basis'> ]",
            "height": "auto",
            "marginBottom": "2%",
            "width": "auto",
          }
        }
      >
        <div
          style={
            Object {
              "backgroundColor": "RGBA(256,256,256,1)",
              "borderBottom": "inset",
              "display": "flex",
              "flex": "none | [ <'flex-grow'> <'flex-shrink'>? || <'flex-basis'> ]",
              "flexDirection": "column",
              "justifyContent": "space-between",
              "marginTop": "1%",
            }
          }
        >
          <p
            style={
              Object {
                "flex": "none | [ <'flex-grow'> <'flex-shrink'>? || <'flex-basis'> ]",
                "marginLeft": "2%",
                "marginRight": "2%",
                "marginTop": "1%",
              }
            }
          >
            Camera: 
            Olympus M.Zuiko Digital ED 12-40mm f/2.8 PRO
          </p>
          <p
            style={
              Object {
                "flex": "none | [ <'flex-grow'> <'flex-shrink'>? || <'flex-basis'> ]",
                "marginLeft": "2%",
                "marginRight": "2%",
                "marginTop": "1%",
              }
            }
          >
            Shutter Speed: 
            test string
          </p>
          <p
            style={
              Object {
                "flex": "none | [ <'flex-grow'> <'flex-shrink'>? || <'flex-basis'> ]",
                "marginLeft": "2%",
                "marginRight": "2%",
                "marginTop": "1%",
              }
            }
          >
            Aperture: 
            test string
          </p>
          <div>
            <p
              style={
                Object {
                  "marginBottom": "15px",
                  "marginLeft": "30px",
                  "marginRight": "30px",
                }
              }
            >
              Lens Info:
            </p>
            <p
              style={
                Object {
                  "marginBottom": "15px",
                  "marginLeft": "60px",
                  "marginRight": "30px",
                }
              }
            >
              Name: 
              Olympus M.Zuiko Digital ED 12-40mm f/2.8 PRO
            </p>
            <p
              style={
                Object {
                  "marginBottom": "15px",
                  "marginLeft": "60px",
                  "marginRight": "30px",
                }
              }
            >
              Feature: 
              Micro Four Thirds System
            </p>
            <p
              style={
                Object {
                  "marginBottom": "15px",
                  "marginLeft": "60px",
                  "marginRight": "30px",
                }
              }
            >
              24-80mm (35mm Equivalent)
            </p>
            <p
              style={
                Object {
                  "marginBottom": "15px",
                  "marginLeft": "60px",
                  "marginRight": "30px",
                }
              }
            >
              Aperture Range: f/2.8 to f/22
            </p>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    style={
      Object {
        "flex": "none | [ <'flex-grow'> <'flex-shrink'>? || <'flex-basis'> ]",
        "marginLeft": "2%",
        "marginRight": "2%",
        "marginTop": "1%",
        "maxWidth": "55%",
      }
    }
  >
    <div
      style={
        Object {
          "alignItems": "center",
          "backgroundColor": "RGB(256,256,256)",
          "borderBottom": "inset",
          "display": "flex",
          "flex": "none | [ <'flex-grow'> <'flex-shrink'>? || <'flex-basis'> ]",
          "flexDirection": "column",
          "height": "auto",
          "justifyContent": "space-around",
          "maxWidth": "100%",
          "width": "auto",
        }
      }
    >
      <p
        style={
          Object {
            "alignSelf": "center",
            "flex": "none | [ <'flex-grow'> <'flex-shrink'>? || <'flex-basis'> ]",
            "fontSize": "1.3em",
            "fontWeight": "bold",
          }
        }
      >
        User Comments
      </p>
      <p
        style={
          Object {
            "alignSelf": "center",
            "flex": "none | [ <'flex-grow'> <'flex-shrink'>? || <'flex-basis'> ]",
            "margin": "3%",
          }
        }
      >
        No comments yet, be the first to comment on this Great Image!
      </p>
    </div>
  </div>
</div>
`;
